# diabetes-prediction

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
conf/base/: catalog.yml  parameters.yml
conf/local/: README.md
data/01_raw/: diabetes-dataset-inference.csv  diabetes-dataset-modelling.csv
src/diabetes/: __init__.py  api.py  pipeline_registry.py  settings.py
src/diabetes/pipelines/: __init__.py
src/diabetes/pipelines/data_engineering/: nodes.py  pipeline.py
src/diabetes/pipelines/inference/: nodes.py  pipeline.py
src/diabetes/pipelines/modelling/: nodes.py  pipeline.py
