[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes"
version = "0.1.0"
dependencies = [
    "kedro>=0.19.0",
    "kedro-datasets[pandas,pickle,json]>=3.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "kedro-viz",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[tool.kedro]
package_name = "diabetes"
project_name = "Diabetes Prediction"
kedro_init_version = "1.3.1"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]

[tool.kedro_telemetry]
project_id = "02b4a1404ad84634ba194a3cd5c1f9f1"
